# agentmem

./: Cargo.toml  README.md
docs/: watch.md
src/: config.rs  lib.rs  types.rs
src/cli/: commands.rs  mod.rs  onboarding.rs  output.rs  prompts.rs
src/core/: limits.rs  map.rs  mod.rs  namespace.rs  validation.rs
src/index/: mod.rs
src/store/: engine.rs  journal.rs  locking.rs  migration.rs  mod.rs  persist.rs
tests/: integration_store.rs
